infrastructure/devops/sonarqube/sonarqube-helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-tls-ingress
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: sonarqube.devops-tools.apoorva64.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
  tls:
    - hosts:
        - sonarqube.devops-tools.apoorva64.com
      secretName: sonarqube-tls-ingress
